dejacode/static/css/dejacode_bootstrap.css
/* ... */
.navbar #search-input {
  color: var(--bs-white);
  background-color: rgba(0,0,0,0.25);
}
.navbar #search-input::placeholder {
  color: var(--bs-gray-300);
}
.navbar .notification-active {
  position: absolute;
  top: 5px;
  left: 25px;
  width: 10px;
  height: 10px;
  content: '';
  border-radius: 50%;
}

/* -- Pagination -- */
nav ul.pagination .disabled {
  --bs-pagination-disabled-bg: var(--bs-pagination-disabled-bg);
}

/* -- Back to Top link -- */
#back-to-top{
  position: fixed;
  bottom: 1.25rem;
  right: 1.25rem;
  cursor: pointer;
  display: none;
  text-decoration: none;
  border-radius: 2.1875rem;

}
#back-to-top:hover i {
  position: relative;
  color: var(--bs-black);
  top: -.4375rem;
}

/* -- clipboard.js -- */
.clipboard {
  position: relative;
}
.btn-clipboard,
.btn-expend {
  position: absolute;
  display: none;
  top: .375rem;
  right: 0;
  z-index: 10;
  color: var(--bs-body-color);
  cursor: pointer;
  background-color: transparent;
  border: 0;
}
dd .btn-clipboard {
  right: 1rem;
}
dd .btn-expend {
  right: 3.1rem;
}
.clipboard:hover .btn-clipboard,
.btn-clipboard:focus,
.clipboard:hover .btn-expend,
.btn-expend:focus {
  display: block;
}
.btn-clipboard:hover,
.btn-expend:hover {
  color: var(--bs-djc-blue-bg);
}
dd.reduced pre {
  max-height: 110px;
  overflow: scroll;
}
.tab-content pre {
  white-space: pre-wrap;
  word-wrap: break-word;
}

/* -- Footer -- */
.footer a {
  color: var(--bs-body-color);
  font-weight: 500;
}
.footer a:hover,
.footer a:focus {
    color: var(--bs-link-hover-color);
    text-decoration: underline;
}
.footer li {
  display: inline-block;
}
.footer li + li {
  margin-left: 1rem;
}

/* -- Homepage card layout -- */
@media (min-width:576px) {
  .card-deck.sm-gutter {
    margin-right: -0.5rem;
    margin-left: -0.5rem;
  }
  .card-deck.sm-gutter .card{
    margin-right: 0.5rem;
    margin-left: 0.5rem;
  }
}
.row.sm-gutter {
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}
.row.sm-gutter > .col {
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

/* -- Object list table -- */
#object-list-table thead {
  position: sticky;
  top: 52px;
  z-index: 1;
  font-size: 0.875rem;
  box-shadow: 0 2px 0 var(--bs-border-color);
}
th.column-grouping {
  width: 36px;
  max-width: 36px;
}
th.column-selection {
  width: 27px;
  max-width: 27px;
}

/* -- Licenses List -- */
.licenses-table th.column-name {
  min-width: 200px;
}
.licenses-table th.column-usage_policy {
  width: 80px;
  min-width: 80px;
}
.licenses-table th.column-category {
  width: 125px;
  min-width: 125px;
}
.licenses-table th.column-category__license_type {
  width: 84px;
}
.licenses-table th.column-license_profile {
  min-width: 155px;
  width: 155px;
}
.licenses-table th[class*=' column-tag__'],
.licenses-table th[class^='column-tag__'] {
  width: 70px;
}

/* -- Owners List -- */
table.owners-table .column-type {
  width: 105px;
  max-width: 105px;
}

/* -- Components List -- */
table.components-table .column-name {
  min-width: 155px;
}
table.components-table .column-version {
  min-width: 85px;
}
table.components-table .column-usage_policy {
  min-width: 80px;
  width: 80px;
}
table.components-table .column-type {
  min-width: 70px;
  width: 70px;
}
table.components-table .column-license_expression {
  width: 200px;
}
table.components-table .column-grouping {
  width: 22px;
}
table.components-table .column-keywords {
  min-width: 110px;
}
table.components-table .column-owner {
  min-width: 80px;
}
table.components-table .column-primary_language {
  min-width: 130px;
}

/* -- Products List -- */
table.products-table .column-name {
  min-width: 180px;
}
table.products-table .column-version {
  min-width: 90px;
}
table.products-table .column-primary_language {
  min-width: 130px;
}
table.products-table .column-configuration_status {
  min-width: 110px;
}
table.products-table .column-keywords {
  min-width: 110px;
}
table.products-table .column-license_expression {
  min-width: 120px;
}
table.products-table .column-owner {
  min-width: 75px;
}
table.products-table .column-productinventoryitem_count {
  width: 100px;
}

/* -- Package List -- */
table.packages-table .column-usage_policy {
  width: 80px;
}
table.packages-table .column-primary_language {
  width: 130px;
}
.list-inline-margin-sm .list-inline-item:not(:last-child) {
  margin-right: 0.125rem;
}

/* -- Vulnerability List -- */
table.vulnerabilities-table .column-vulnerability_id {
  width: 220px;
}
table.vulnerabilities-table .column-aliases {
  width: 210px;
}
table.vulnerabilities-table .column-score_range {
  width: 110px;
}
table.vulnerabilities-table .column-priority {
  width: 110px;
}
table.vulnerabilities-table .column-summary {
  width: 300px;
  max-width: 300px;
}

/* -- Vulnerability tab -- */
#tab_vulnerabilities .column-vulnerability_id {
  width: 230px;
}
#tab_vulnerabilities .column-affected_packages {
  min-width: 250px;
}
#tab_vulnerabilities .column-exploitability {
  width: 140px;
}
#tab_vulnerabilities .column-weighted_severity {
  width: 105px;
}
#tab_vulnerabilities .column-risk_score,
#tab_vulnerabilities .column-weighted_risk_score{
  width: 80px;
}
#tab_vulnerabilities .column-summary {
  width: 300px;
}
#tab_vulnerabilities .column-vulnerability_analyses__state {
  min-width: 125px;
}
#tab_vulnerabilities .column-vulnerability_analyses__justification {
  min-width: 130px;
}
#tab_vulnerabilities .column-vulnerability_analyses__responses {
  width: 185px;
}
#tab_vulnerabilities .column-vulnerability_analyses__is_reachable {
  width: 80px;
}
/* -- Vulnerability analysis modal -- */
#vulnerability-analysis-modal #div_id_responses .form-check {
  display: inline-block;
  margin-right: 1rem;
}
#vulnerability-analysis-modal .form-label {
  font-weight: 600;
}

/* -- Dependency tab -- */
#tab_dependencies .column-for_package {
  min-width: 300px;
}
#tab_dependencies .column-resolved_to_package {
  min-width: 300px;
}
#tab_dependencies .column-is_runtime {
  width: 85px;
  font-size: 0.75rem;
}
/* ... */

